tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_50.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (((- (0 MOD 1223)) MOD ((1223 MOD y) + (x MOD y))) - (((2 MOD 0) + (2 + 200)) * ((z DIV 2) - (- 1223))));
               x := ((+ (- (x + 0))) + (+ ((1223 * 0) MOD (- x))));
               z := (- (+ ((1223 MOD 1223) + (y DIV z))));
               p := ((((1 * z) MOD (- x)) MOD ((0 DIV 0) + (+ 2))) = (+ (+ (1 * 1223))));
               r := ((((+ y) + (1 - x)) * ((2 * 1223) MOD (z + 200))) > (+ ((- 1) * (200 - x))));
               z := ((((z + 2) - (1223 + 1223)) MOD (+ (0 DIV y))) + (+ (+ (200 DIV 0))));
               y := (((- (x * x)) + ((z * y) * (x - 2))) * (+ ((- 200) DIV (+ 2))));
  (* error *)  z := (+ (- (- (q DIV 1223))));
               q := ((((200 + z) - (z + 2)) # ((+ 0) DIV (z - z))) & (((x - 0) <= (1223 - x)) OR ((- 200) >= (- 1223))));
               x := ((- ((x + 2) MOD (z MOD 200))) - ((- (x * 0)) - ((y MOD 2) MOD (2 - 1223))))
END Test18.